Corregir rutas de archivos en varias páginas HTML

--- a/categorias/electronica.html
+++ b/categorias/electronica.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electronica</title>
-    <link rel="shortcut icon" href="/images/DeTodito-logo-sin.png" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="shortcut icon" href="images/DeTodito-logo-sin.png" />
+    <link rel="stylesheet" href="styles/categorias.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -17,9 +17,9 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        <a href="/index.html">
+        <a href="index.html">
           <img
-            src="/images/Logo-Web-De-Todito.png"
+            src="images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
           />
         </a>
@@ -31,12 +31,12 @@
       </div>
 
       <div class="user-actions">
-        <a href="/login.html" class="btn login-icon"
+        <a href="login.html" class="btn login-icon"
           ><i class="fa-solid fa-right-to-bracket"></i
         ></a>
-        <a href="/registro.html" class="btn login-text">Creá tu cuenta</a>
-        <a href="/login.html" class="btn login-text">Ingresá</a>
-        <a href="/carrito.html" class="btn"
+        <a href="registro.html" class="btn login-text">Creá tu cuenta</a>
+        <a href="login.html" class="btn login-text">Ingresá</a>
+        <a href="carrito.html" class="btn"
           ><i class="fa-solid fa-bag-shopping"></i
         ></a>
       </div>
@@ -129,9 +129,9 @@
       src="https://kit.fontawesome.com/38dd05b7b5.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/scripts/categorias.js"></script>
-    <script src="/scripts/listas.js"></script>
-    <script src="/scripts/productos.js"></script>
-    <script src="/scripts/proximamente.js"></script>
+    <script src="scripts/categorias.js"></script>
+    <script src="scripts/listas.js"></script>
+    <script src="scripts/productos.js"></script>
+    <script src="scripts/proximamente.js"></script>
   </body>
 </html>
