--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
     <div class="full-container">
       <div class="login-container">
         <div class="form-container">
-          <form class="styled-form" id="login-form" action="/index-logued.html">
+          <form class="styled-form" id="login-form" action="index-logued.html">
             <div class="logo-container">
               <a href="index.html">
                 <img
-                  src="/images/Logo-Web-De-Todito.png"
+                  src="images/Logo-Web-De-Todito.png"
                   alt="Logo De Todito"
                   loading="lazy"
                 />
@@ -78,7 +78,7 @@
             <div class="form-buttons">
               <button type="submit" class="btn btn-login">Ingresar</button>
               <button type="button" class="btn btn-google">
-                <img src="/images/google.png" alt="Google" />
+                <img src="images/google.png" alt="Google" />
                 Iniciar con Google
               </button>
               <div class="account">
@@ -92,6 +92,6 @@
         </div>
       </div>
     </div>
-    <script src="/scripts/validacion.js"></script>
+    <script src="scripts/validacion.js"></script>
   </body>
 </html>
