--- a/registro.html
+++ b/registro.html
@@ -206,7 +206,7 @@
 
             <div class="form-buttons">
               <button type="button" class="btn btn-google">
-                <img src="/images/google.png" alt="Google" />
+                <img src="images/google.png" alt="Google" />
                 Iniciar con Google
               </button>
             </div>
@@ -214,6 +214,6 @@
         </div>
       </div>
     </div>
-    <script src="/scripts/validacion.js"></script>
+    <script src="scripts/validacion.js"></script>
   </body>
 </html>
