--- a/Recuperar.html
+++ b/Recuperar.html
@@ -67,6 +67,6 @@
       </div>
     </div>
 
-    <script src="/scripts/validacion.js"></script>
+    <script src="scripts/validacion.js"></script>
   </body>
 </html>
