agregar estilos responsive y agregar nav inferior en tablet/mobile

--- a/categorias/camperas.html
+++ b/categorias/camperas.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camperas</title>
-    <link rel="shortcut icon" href="/images/DeTodito-logo-sin.png" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="shortcut icon" href="../images/DeTodito-logo-sin.png" />
+    <link rel="stylesheet" href="../styles/categorias.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -17,9 +17,9 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
           <img
-            src="/images/Logo-Web-De-Todito.png"
+            src="../images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
           />
         </a>
@@ -31,12 +31,12 @@
       </div>
 
       <div class="user-actions">
-        <a href="/login.html" class="btn login-icon"
+        <a href="../login.html" class="btn login-icon"
           ><i class="fa-solid fa-right-to-bracket"></i
         ></a>
-        <a href="/registro.html" class="btn login-text">Creá tu cuenta</a>
-        <a href="/login.html" class="btn login-text">Ingresá</a>
-        <a href="/carrito.html" class="btn"
+        <a href="../registro.html" class="btn login-text">Creá tu cuenta</a>
+        <a href="../login.html" class="btn login-text">Ingresá</a>
+        <a href="../carrito.html" class="btn"
           ><i class="fa-solid fa-bag-shopping"></i
         ></a>
       </div>
@@ -116,8 +116,18 @@
         <div class="footer-social">
           <p>¡Seguinos en nuestras redes!</p>
           <div class="social-icons">
-            <a href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://m.facebook.com/61578328675321/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+            <a
+              href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              href="https://m.facebook.com/61578328675321/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -125,13 +135,43 @@
         Imágenes diseñadas por<a href="http://www.freepik.es/">Freepik</a>
       </div>
     </footer>
+    <!-- Bottom mobile navigation -->
+    <nav class="bottom-nav" aria-label="Navegación inferior">
+      <a href="../index.html" class="item" aria-label="Inicio">
+        <i class="fa-solid fa-house icon" aria-hidden="true"></i>
+        <span class="label">Inicio</span>
+      </a>
+      <a href="../registro.html" class="item" aria-label="Registrarse">
+        <i class="fa-solid fa-user-plus icon" aria-hidden="true"></i>
+        <span class="label">Registrarse</span>
+      </a>
+      <a
+        href="#"
+        class="item primary"
+        data-proximamente="true"
+        aria-label="Carrito"
+      >
+        <span class="icon-container"
+          ><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i
+        ></span>
+        <span class="label">Carrito</span>
+      </a>
+      <a href="../login.html" class="item" aria-label="Ingresar">
+        <i class="fa-solid fa-door-open icon" aria-hidden="true"></i>
+        <span class="label">Ingresar</span>
+      </a>
+      <a href="#" class="item" data-proximamente="true" aria-label="Más">
+        <i class="fa-solid fa-bars icon" aria-hidden="true"></i>
+        <span class="label">Más</span>
+      </a>
+    </nav>
     <script
       src="https://kit.fontawesome.com/38dd05b7b5.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/scripts/categorias.js"></script>
-    <script src="/scripts/listas.js"></script>
-    <script src="/scripts/productos.js"></script>
-    <script src="/scripts/proximamente.js"></script>
+    <script src="../scripts/categorias.js"></script>
+    <script src="../scripts/listas.js"></script>
+    <script src="../scripts/productos.js"></script>
+    <script src="../scripts/proximamente.js"></script>
   </body>
 </html>
