--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De Todito - Polirubro</title>
     <link rel="shortcut icon" href="images/DeTodito-logo-sin.png" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <div class="logo">
         <a href="index.html">
           <img
-            src="/images/Logo-Web-De-Todito.png"
+            src="images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
           />
         </a>
@@ -91,28 +91,28 @@
 
       <div class="imagenes">
         <video
-          src="/images/BANNER1.mp4"
+          src="images/BANNER1.mp4"
           alt="Banner 1"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER2.mp4"
+          src="images/BANNER2.mp4"
           alt="Banner 2"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER3.mp4"
+          src="images/BANNER3.mp4"
           alt="Banner 3"
           autoplay
           muted
           loop
         ></video>
-        <img src="/images/BANNER2.png" alt="Banner 4" />
-        <img src="/images/BANNER3.png" alt="Banner 5" />
+        <img src="images/BANNER2.png" alt="Banner 4" />
+        <img src="images/BANNER3.png" alt="Banner 5" />
       </div>
 
       <div class="dots" role="tablist" aria-label="Indicadores del carrusel">
@@ -189,14 +189,37 @@
         Imágenes diseñadas por<a href="http://www.freepik.es/">Freepik</a>
       </div>
     </footer>
+    <!-- Bottom mobile navigation -->
+    <nav class="bottom-nav" aria-label="Navegación inferior">
+      <a href="index.html" class="item" aria-label="Inicio">
+        <i class="fa-solid fa-house icon" aria-hidden="true"></i>
+        <span class="label">Inicio</span>
+      </a>
+      <a href="registro.html" class="item" aria-label="Registrarse">
+        <i class="fa-solid fa-user-plus icon" aria-hidden="true"></i>
+        <span class="label">Registrarse</span>
+      </a>
+      <a href="#" class="item primary" data-proximamente="true" aria-label="Carrito">
+        <span class="icon-container"><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i></span>
+        <span class="label">Carrito</span>
+      </a>
+      <a href="login.html" class="item" aria-label="Ingresar">
+        <i class="fa-solid fa-door-open icon" aria-hidden="true"></i>
+        <span class="label">Ingresar</span>
+      </a>
+      <a href="#" class="item" data-proximamente="true" aria-label="Más">
+        <i class="fa-solid fa-bars icon" aria-hidden="true"></i>
+        <span class="label">Más</span>
+      </a>
+    </nav>
   </body>
   <script
     src="https://kit.fontawesome.com/38dd05b7b5.js"
     crossorigin="anonymous"
   ></script>
-  <script src="/scripts/carrusel.js"></script>
-  <script src="/scripts/listas.js"></script>
-  <script src="/scripts/categorias.js"></script>
-  <script src="/scripts/productos.js"></script>
-  <script src="/scripts/proximamente.js"></script>
+  <script src="scripts/carrusel.js"></script>
+  <script src="scripts/listas.js"></script>
+  <script src="scripts/categorias.js"></script>
+  <script src="scripts/productos.js"></script>
+  <script src="scripts/proximamente.js"></script>
 </html>
