--- a/index-logued.html
+++ b/index-logued.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De Todito - Polirubro</title>
     <link rel="shortcut icon" href="images/DeTodito-logo-sin.png" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/categorias.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/categorias.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <div class="logo">
         <a href="index-logued.html">
           <img
-            src="/images/Logo-Web-De-Todito.png"
+            src="images/Logo-Web-De-Todito.png"
             alt="Logo de De Todito Polirubro"
           />
         </a>
@@ -37,7 +37,7 @@
         <!-- Botón de usuario logueado -->
         <a href="#" class="btn user-menu">
           <span class="avatar" aria-hidden="true">
-            <img src="/images/imagen-perfil.jpeg" alt="Foto de perfil" />
+            <img src="images/imagen-perfil.jpeg" alt="Foto de perfil" />
           </span>
           <span class="username">Usuario</span>
           <i class="fa-solid fa-chevron-down chevron" aria-hidden="true"></i>
@@ -51,10 +51,12 @@
 
     <!-- NAV -->
     <nav>
-      <button>Categorías <i class="fa-solid fa-chevron-down"></i></button>
+      <button class="category">
+        Categorías <i class="fa-solid fa-chevron-down"></i>
+      </button>
       <button>Oferta</button>
       <button>Vender</button>
-      <a href="favoritos.html"><button>Favoritos</button></a>
+      <a href="favoritos.html" class="favoritos"><button>Favoritos</button></a>
       <button>Ayuda</button>
     </nav>
 
@@ -97,28 +99,28 @@
 
       <div class="imagenes">
         <video
-          src="/images/BANNER1.mp4"
+          src="images/BANNER1.mp4"
           alt="Banner 1"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER2.mp4"
+          src="images/BANNER2.mp4"
           alt="Banner 2"
           autoplay
           muted
           loop
         ></video>
         <video
-          src="/images/BANNER3.mp4"
+          src="images/BANNER3.mp4"
           alt="Banner 3"
           autoplay
           muted
           loop
         ></video>
-        <img src="/images/BANNER2.png" alt="Banner 4" />
-        <img src="/images/BANNER3.png" alt="Banner 5" />
+        <img src="images/BANNER2.png" alt="Banner 4" />
+        <img src="images/BANNER3.png" alt="Banner 5" />
       </div>
 
       <div class="dots" role="tablist" aria-label="Indicadores del carrusel">
@@ -186,8 +188,18 @@
         <div class="footer-social">
           <p>¡Seguinos en nuestras redes!</p>
           <div class="social-icons">
-            <a href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://m.facebook.com/61578328675321/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+            <a
+              href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              href="https://m.facebook.com/61578328675321/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -195,14 +207,44 @@
         Imágenes diseñadas por<a href="http://www.freepik.es/">Freepik</a>
       </div>
     </footer>
+    <!-- Bottom mobile navigation -->
+    <nav class="bottom-nav" aria-label="Navegación inferior">
+      <a href="index-logued.html" class="item" aria-label="Inicio">
+        <i class="fa-solid fa-house icon" aria-hidden="true"></i>
+        <span class="label">Inicio</span>
+      </a>
+      <a href="favoritos.html" class="item" aria-label="Favoritos">
+        <i class="fa-solid fa-heart icon" aria-hidden="true"></i>
+        <span class="label">Favoritos</span>
+      </a>
+      <a
+        href=""
+        class="item primary"
+        data-proximamente="true"
+        aria-label="Carrito"
+      >
+        <span class="icon-container"
+          ><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i
+        ></span>
+        <span class="label">Carrito</span>
+      </a>
+      <a href="" class="item" data-proximamente="true" aria-label="Tú">
+        <i class="fa-solid fa-user icon" aria-hidden="true"></i>
+        <span class="label">Tú</span>
+      </a>
+      <a href="" class="item" data-proximamente="true" aria-label="Más">
+        <i class="fa-solid fa-bars icon" aria-hidden="true"></i>
+        <span class="label">Más</span>
+      </a>
+    </nav>
   </body>
   <script
     src="https://kit.fontawesome.com/38dd05b7b5.js"
     crossorigin="anonymous"
   ></script>
-  <script src="/scripts/carrusel.js"></script>
-  <script src="/scripts/listas.js"></script>
-  <script src="/scripts/categorias.js"></script>
-  <script src="/scripts/productos.js"></script>
-  <script src="/scripts/proximamente.js"></script>
+  <script src="scripts/carrusel.js"></script>
+  <script src="scripts/listas.js"></script>
+  <script src="scripts/categorias.js"></script>
+  <script src="scripts/productos.js"></script>
+  <script src="scripts/proximamente.js"></script>
 </html>
