--- a/index-logued.html
+++ b/index-logued.html
@@ -39,7 +39,7 @@
           <span class="avatar" aria-hidden="true">
             <img src="images/imagen-perfil.jpeg" alt="Foto de perfil" />
           </span>
-          <span class="username">Usuario</span>
+          <span class="username">Melani</span>
           <i class="fa-solid fa-chevron-down chevron" aria-hidden="true"></i>
         </a>
         <a href="#" class="btn login-text">Mis compras</a>
