agregar contenedor para el enlace de "Olvidé mi clave" y ajustar estilos de login

--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
                 <input type="checkbox" name="remember" id="remember" />
                 <label for="remember">Recordarme</label>
               </div>
-              <div>
+              <div class="forgot-password-container">
                 <a href="Recuperar.html" class="forgot-password"
                   >Olvidé mi clave</a
                 >
