agregar modal para indicar que debe iniciar sesión

--- a/categorias/blanqueria.html
+++ b/categorias/blanqueria.html
@@ -173,5 +173,6 @@
     <script src="../scripts/listas.js"></script>
     <script src="../scripts/productos.js"></script>
     <script src="../scripts/proximamente.js"></script>
+    <script src="../scripts/requiere_login.js"></script>
   </body>
 </html>
