--- a/index.html
+++ b/index.html
@@ -222,4 +222,5 @@
   <script src="scripts/categorias.js"></script>
   <script src="scripts/productos.js"></script>
   <script src="scripts/proximamente.js"></script>
+  <script src="scripts/requiere_login.js"></script>
 </html>
