--- a/index-logued.html
+++ b/index-logued.html
@@ -247,4 +247,5 @@
   <script src="scripts/categorias.js"></script>
   <script src="scripts/productos.js"></script>
   <script src="scripts/proximamente.js"></script>
+  <script src="scripts/favoritos_success.js"></script>
 </html>
