agregar menu de usuario y cerrar sesión

--- a/index-logued.html
+++ b/index-logued.html
@@ -247,5 +247,6 @@
   <script src="scripts/categorias.js"></script>
   <script src="scripts/productos.js"></script>
   <script src="scripts/proximamente.js"></script>
+  <script src="scripts/user_menu.js"></script>
   <script src="scripts/favoritos_success.js"></script>
 </html>
