arreglar pagina favoritos

--- a/favoritos.html
+++ b/favoritos.html
@@ -94,8 +94,18 @@
         <div class="footer-social">
           <p>¡Seguinos en nuestras redes!</p>
           <div class="social-icons">
-            <a href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://m.facebook.com/61578328675321/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+            <a
+              href="https://www.instagram.com/detodito.polirubro?igsh=bWk3NXVnN3kxN3Y2"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              href="https://m.facebook.com/61578328675321/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -113,8 +123,15 @@
         <i class="fa-solid fa-heart icon" aria-hidden="true"></i>
         <span class="label">Favoritos</span>
       </a>
-      <a href="#" class="item primary" data-proximamente="true" aria-label="Carrito">
-        <span class="icon-container"><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i></span>
+      <a
+        href="#"
+        class="item primary"
+        data-proximamente="true"
+        aria-label="Carrito"
+      >
+        <span class="icon-container"
+          ><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i
+        ></span>
         <span class="label">Carrito</span>
       </a>
       <a href="#" class="item" data-proximamente="true" aria-label="Tú">
@@ -138,4 +155,5 @@
   <script src="scripts/carrito-modal.js"></script>
   <script src="scripts/favoritos.js"></script>
   <script src="scripts/proximamente.js"></script>
+  <script src="scripts/user_menu.js"></script>
 </html>
